# rgringo-client

./: README.md  deploy-client.md  index.html  package-lock.json  package.json  vite.config.ts
src/: App.tsx  index.css
src-tauri/: Cargo.toml  tauri.conf.json
src-tauri/capabilities/: default.json
src-tauri/icons/: icon.icns
src-tauri/src/: commands.rs  error.rs  http.rs  lib.rs  main.rs  state.rs
src/api/: client.ts
src/pages/: Connect.tsx  Editor.tsx  Entries.tsx  Folders.tsx
