[package]
name = "rgringo-client"
version = "0.1.0"
edition = "2024"

[lib]
name = "rgringo_client_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[[bin]]
name = "rgringo-client"
path = "src/main.rs"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
tauri = { version = "2", features = ["tray-icon"] }
tauri-plugin-shell = "2"
tauri-plugin-store = "2"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
tokio = { version = "1", features = ["full"] }
thiserror = "2"
zeroize = "1"

[target.'cfg(unix)'.dependencies]
libc = "0.2"

[profile.release]
panic = "abort"
codegen-units = 1
lto = true
opt-level = "s"
strip = true
